# python-sdk

./: .gitignore  LICENSE  LICENSE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
a2e/: __init__.py  schema.py
a2e/core/: capabilities.py
codewiki/: LICENSE.md  README.md  index.md  package-lock.json  package.json  producthunt-launch-a2e.md
codewiki/.vitepress/: config.mjs  sidebar.mjs
codewiki/a2e-launch-video/: a2e-architecture.html  plan.md
codewiki/architecture/: message-protocol.md  overview.md  plugin-system.md  session-management.md  transport-layer.md
codewiki/blog/: 2026-05-21-the-harness-is-the-product.md  2026-09-09-building-a2e-agent-harness.md
codewiki/capabilities/: chains.md  env.md  learn.md  mcp.md  memory.md  planning.md  proc.md  skills.md  subagents.md  toolkits.md  tools.md
codewiki/cookbook/: chain-pipeline.md  custom-tools.md  env-agent-loop.md  mcp-bridge.md  mcp-integration.md  memory-plugin.md  planning-plugin.md  subagent-orchestrator.md  toolkit-builder.md  writing-a-plugin.md
codewiki/getting-started/: installation.md  quickstart.md
codewiki/protocol-spec/: capability-negotiation.md  chains.md  env.md  error-codes.md  handshake.md  learn.md  mcp.md  memory.md  message-format.md  message-types.md  planning.md  proc.md  skills.md  subagents.md  toolkits.md  tools.md
codewiki/public/: a2e-architecture.html
codewiki/resources/: changelog.md  faq.md  glossary.md  security-trust.md  support.md
codewiki/sdk-reference/: audit.md  client-api.md  configuration.md  server-api.md  store.md
(+137 files in other folders)
